After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703154 - Calling gtk_widget_set_opacity() on an unrealized widget triggers a segfault
Calling gtk_widget_set_opacity() on an unrealized widget triggers a segfault
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-06-26 21:40 UTC by Emmanuele Bassi (:ebassi)
Modified: 2013-07-04 11:46 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Emmanuele Bassi (:ebassi) 2013-06-26 21:40:46 UTC
gtk_widget_set_opacity() unconditionally calls gtk_widget_update_alpha(), which tries to access the GdkWindow → BOOM.

I think it should be enough to move the update_alpha() under a condition check on get_realized(); once the widget is realized, there should be an emission of GtkWidget::style-updated, which in turn will call update_alpha().
Comment 1 Alexander Larsson 2013-07-04 11:46:23 UTC
fixed this in master.