widget: Don't crash if setting alpha on non-realized widget.

https://bugzilla.gnome.org/show_bug.cgi?id=703154